--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,14 @@ cmd2==2.4.3
 dataclasses-json==0.5.7
 dnspython==2.3.0
 exceptiongroup==1.1.1
+filelock==3.12.0
 Flask==2.2.3
+Flask-Cors==3.0.10
 Flask-PyMongo==2.3.0
 frozenlist==1.3.3
+fsspec==2023.5.0
 geojson==2.5.0
+huggingface-hub==0.14.1
 idna==3.4
 importlib-metadata==6.6.0
 iniconfig==2.0.0
@@ -49,7 +53,7 @@ six==1.16.0
 SQLAlchemy==1.4.47
 stevedore==5.0.0
 tenacity==8.2.2
--e git+ssh://git@github.com/acruikshank-wm/testbench.git@49f82da136f60e090f6e9928d36583b2a96271ca#egg=testbench
+-e git+ssh://git@github.com/acruikshank-wm/testbench.git@b10e78f98865c81ff35e4e3ce8630e78bfa12d20#egg=testbench
 tomli==2.0.1
 tqdm==4.65.0
 typing-inspect==0.8.0
