--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,33 @@
-version: '3.3'
+version: '3.8'
 services:
-    mongo:
-        ports:
-            - '27017:27017'
-        container_name: dkrcomp-mongo
-        restart: always
-        logging:
-            options:
-                max-size: 1g
-        environment:
-            - MONGO_INITDB_ROOT_USERNAME=mongoadmin
-            - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
-        image: mongo
+  mongo:
+    image: mongo
+    ports:
+      - '27017:27017'
+    container_name: dkrcomp-mongo
+    restart: always
+    logging:
+      options:
+        max-size: 1g
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=mongoadmin
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
+
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '4900:4900'
+    environment:
+      - FLASK_APP=../server/testbench.py
+      - FLASK_DEBUG=1
+    command: sh -c "cd app && ../venv/bin/python -m flask run --host=0.0.0.0 --port=4900"
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '5173:5173'
+    command: sh -c "cd app && npm run dev -- --host 0.0.0.0"
