--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-PyMongo==2.3.0
 frozenlist==1.3.3
 fsspec==2023.5.0
 geojson==2.5.0
+gunicorn==20.1.0
 huggingface-hub==0.14.1
 idna==3.4
 importlib-metadata==6.6.0
