--- a/.github/workflows/server_tests.yml
+++ b/.github/workflows/server_tests.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11.4"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with pytest
         run: |
-          pytest
+          python -m pytest
