--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -1,4 +1,4 @@
-name: Jest
+name: App Test
 on: push
 jobs:
   test:
@@ -11,7 +11,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "12"
+          node-version: "18"
 
       # Speed up subsequent runs with caching
       - name: Cache node modules
