--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 langchain==0.0.125
+loguru==0.7.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -37,6 +38,7 @@ numpy==1.24.2
 openai==0.27.2
 packaging==23.0
 pbr==5.11.1
+pinecone-client==2.2.2
 pluggy==1.0.0
 prettytable==3.7.0
 pydantic==1.10.7
@@ -46,6 +48,7 @@ pyowm==3.3.0
 pyperclip==1.8.2
 PySocks==1.7.1
 pytest==7.3.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.28.2
