--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dompurify": "^3.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.64.1"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
