--- a/requirements.txt
+++ b/requirements.txt
@@ -26,17 +26,26 @@ importlib-metadata==6.6.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.125
+joblib==1.3.1
+langchain==0.0.245
+langsmith==0.0.14
+loguru==0.7.0
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
+mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+networkx==3.1
+nltk==3.8.1
 numexpr==2.8.4
 numpy==1.24.2
 openai==0.27.2
+openapi-schema-pydantic==1.2.4
 packaging==23.0
 pbr==5.11.1
+Pillow==10.0.0
+pinecone-client==2.2.2
 pluggy==1.0.0
 prettytable==3.7.0
 pydantic==1.10.7
@@ -46,16 +55,31 @@ pyowm==3.3.0
 pyperclip==1.8.2
 PySocks==1.7.1
 pytest==7.3.1
+pytest-mock==3.11.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0
+regex==2023.6.3
 requests==2.28.2
 requests-mock==1.10.0
+safetensors==0.3.1
+scikit-learn==1.3.0
+scipy==1.11.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
 six==1.16.0
 SQLAlchemy==1.4.47
 stevedore==5.0.0
+sympy==1.12
 tenacity==8.2.2
+# -e git+ssh://git@github.com/wm-pxel/langchain-testbench.git@138baa1468c61869c0e59dbd7a3162600741ece5#egg=testbench
+threadpoolctl==3.2.0
+tokenizers==0.13.3
 tomli==2.0.1
+torch==2.0.1
+torchvision==0.15.2
 tqdm==4.65.0
+transformers==4.31.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 urllib3==1.26.15
