--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tooltip": "^5.20.0",
     "sass": "^1.64.1"
   },
   "devDependencies": {
