--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 cliff==4.2.0
 cmd2==2.4.3
+ctransformers==0.2.26
 dataclasses-json==0.5.7
 dnspython==2.3.0
 exceptiongroup==1.1.1
