--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ requests-mock==1.10.0
 safetensors==0.3.1
 scikit-learn==1.3.0
 scipy==1.11.1
-sentence-transformers==2.2.2
+# sentence-transformers==2.2.2 - uncomment for vector search
 sentencepiece==0.1.99
 six==1.16.0
 SQLAlchemy==1.4.47
@@ -76,10 +76,10 @@ tenacity==8.2.2
 threadpoolctl==3.2.0
 tokenizers==0.13.3
 tomli==2.0.1
-torch==2.0.1
-torchvision==0.15.2
+# torch==2.0.1 - uncomment for vector search
+# torchvision==0.15.2 - uncomment for vector search
 tqdm==4.65.0
-transformers==4.31.0
+# transformers==4.31.0 - uncomment for vector search
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 urllib3==1.26.15
